feat: add filter presets which provide shortcuts to save and re-apply configured filters for updates
